feat: MergeIntervals (65), ImplementTriePrefixTree (208), ReplaceWords (648) and FindLargestValueInEachTreeRow (515) solutions.